--- a/app/src/main/res/layout/item_mobile_data_usage.xml
+++ b/app/src/main/res/layout/item_mobile_data_usage.xml
@@ -64,7 +64,15 @@
                 android:text="center"
                 android:textSize="14sp"
                 android:textColor="@android:color/black"/>
+                <ImageView
+                    android:id="@+id/imageViewClick"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@mipmap/ic_launcher"
+                    android:layout_alignParentRight="true"/>
             </RelativeLayout>
+
+
 
 
         </LinearLayout>
